--- a/NeuroApp/Storyboard/Quiz/QuizPartTwo.storyboard
+++ b/NeuroApp/Storyboard/Quiz/QuizPartTwo.storyboard
@@ -19,13 +19,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cUP-Lg-hUv">
-                                <rect key="frame" x="20" y="44" width="374" height="30"/>
+                                <rect key="frame" x="50" y="64" width="314" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TRS-2p-kCH" customClass="RoundButton" customModule="NeuroApp" customModuleProvider="target">
-                                <rect key="frame" x="40" y="478" width="334" height="50"/>
+                                <rect key="frame" x="40" y="518" width="334" height="50"/>
                                 <color key="backgroundColor" name="NAGreen"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="aqi-gv-7Ai"/>
@@ -38,10 +38,10 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gxw-Jk-1xZ" customClass="OptionView" customModule="NeuroApp" customModuleProvider="target">
-                                <rect key="frame" x="40" y="94" width="334" height="334"/>
+                                <rect key="frame" x="20" y="114" width="374" height="374"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="gxw-Jk-1xZ" secondAttribute="height" id="msu-6T-tHM"/>
+                                    <constraint firstAttribute="width" secondItem="gxw-Jk-1xZ" secondAttribute="height" multiplier="1:1" id="EHV-LB-XBO"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -52,11 +52,11 @@
                             <constraint firstItem="TRS-2p-kCH" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="40" id="6Cc-S6-JxM"/>
                             <constraint firstItem="TRS-2p-kCH" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="7f1-kR-42Y"/>
                             <constraint firstItem="gxw-Jk-1xZ" firstAttribute="top" secondItem="cUP-Lg-hUv" secondAttribute="bottom" constant="20" id="A1S-MK-BxZ"/>
-                            <constraint firstItem="TRS-2p-kCH" firstAttribute="top" secondItem="gxw-Jk-1xZ" secondAttribute="bottom" constant="50" id="DU7-nw-pwi"/>
-                            <constraint firstItem="cUP-Lg-hUv" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="OcC-w8-1sR"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="gxw-Jk-1xZ" secondAttribute="trailing" constant="40" id="S02-x1-P9z"/>
-                            <constraint firstItem="gxw-Jk-1xZ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="40" id="ZnU-tN-rHU"/>
-                            <constraint firstItem="cUP-Lg-hUv" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="wVK-MR-3N8"/>
+                            <constraint firstItem="TRS-2p-kCH" firstAttribute="top" secondItem="gxw-Jk-1xZ" secondAttribute="bottom" constant="30" id="DU7-nw-pwi"/>
+                            <constraint firstItem="cUP-Lg-hUv" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="OcC-w8-1sR"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="gxw-Jk-1xZ" secondAttribute="trailing" constant="20" id="S02-x1-P9z"/>
+                            <constraint firstItem="gxw-Jk-1xZ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="ZnU-tN-rHU"/>
+                            <constraint firstItem="cUP-Lg-hUv" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="50" id="wVK-MR-3N8"/>
                         </constraints>
                     </view>
                     <connections>
